--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
         </div>
        
-        <button id="calculate-btn">Calculate <br>GPA</button>
+        <button id="calculate-btn">Calculate <br>GGPA</button>
         <p id="cgpa"></p>
         <button id="add-semester"><i class="fa-solid fa-bars"></i> Add Semester</button>
     </div>
