--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <header>
+        <div class="banner">
+            <img src="Images/seu_low.png" alt="">
+            <h2>SEU whole semester GPA & CGPA Calculator</h2>
+        </div>
+    </header>
     <div class="container">
         <div class="items" id="item">
             <div id="items">
