--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
             <br>
             </div>
-            <i id="add-row" class="fa-solid fa-circle-plus"></i>
+            <i id="add-row" class="fa-solid fa-circle-plus"></i> <br>
             <button class="calculate-gpa" id="calculate-gpa" onclick="calculateGPA()">Calculate Gpa</button>
             <p class="mygpa" id="gpa1"></p>
             
