--- a/index.html
+++ b/index.html
@@ -21,69 +21,77 @@
         <div class="items" id="item">
             <div id="items">
             <h3 class="semester-title">SEMESTER - 1</h3>
-            <input class="course" type="text" placeholder="Course Name(optional)">
-            <label for="cars">Grade:</label>
-            <select name="cars" id="cars" class="grades1 grades">
-                <option value="A+">A+</option>
-                <option value="A">A</option>
-                <option value="A-">A-</option>
-                <option value="B+">B+</option>
-                <option value="B">B</option>
-                <option value="B-">B-</option>
-                <option value="C+">C+</option>
-                <option value="C">C</option>
-                <option value="D">D</option>
-                <option value="F">F</option>
-            </select>
-            <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+           <div class="input-items">
+                <input class="course" type="text" placeholder="Course Name(optional)">
+                <label for="cars">Grade:</label>
+                <select name="cars" id="cars" class="grades1 grades">
+                    <option value="A+">A+</option>
+                    <option value="A">A</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
+                    <option value="B">B</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
+                    <option value="C">C</option>
+                    <option value="D">D</option>
+                    <option value="F">F</option>
+                </select>
+                <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+           </div>
             <br>
-            <input class="course" type="text" placeholder="Course Name(optional)">
-            <label for="cars">Grade:</label>
-            <select name="cars" id="cars" class="grades1 grades">
-                <option value="A+">A+</option>
-                <option value="A">A</option>
-                <option value="A-">A-</option>
-                <option value="B+">B+</option>
-                <option value="B">B</option>
-                <option value="B-">B-</option>
-                <option value="C+">C+</option>
-                <option value="C">C</option>
-                <option value="D">D</option>
-                <option value="F">F</option>
-            </select>
-            <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+            <div class="input-items">
+                <input class="course" type="text" placeholder="Course Name(optional)">
+                <label for="cars">Grade:</label>
+                <select name="cars" id="cars" class="grades1 grades">
+                    <option value="A+">A+</option>
+                    <option value="A">A</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
+                    <option value="B">B</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
+                    <option value="C">C</option>
+                    <option value="D">D</option>
+                    <option value="F">F</option>
+                </select>
+                <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+            </div>
             <br>
-            <input class="course" type="text" placeholder="Course Name(optional)">
-            <label for="cars">Grade:</label>
-            <select name="cars" id="cars" class="grades1 grades">
-                <option value="A+">A+</option>
-                <option value="A">A</option>
-                <option value="A-">A-</option>
-                <option value="B+">B+</option>
-                <option value="B">B</option>
-                <option value="B-">B-</option>
-                <option value="C+">C+</option>
-                <option value="C">C</option>
-                <option value="D">D</option>
-                <option value="F">F</option>
-            </select>
-            <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+           <div class="input-items">
+                <input class="course" type="text" placeholder="Course Name(optional)">
+                <label for="cars">Grade:</label>
+                <select name="cars" id="cars" class="grades1 grades">
+                    <option value="A+">A+</option>
+                    <option value="A">A</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
+                    <option value="B">B</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
+                    <option value="C">C</option>
+                    <option value="D">D</option>
+                    <option value="F">F</option>
+                </select>
+                <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+           </div>
             <br>
-            <input class="course" type="text" placeholder="Course Name(optional)">
-            <label for="cars">Grade:</label>
-            <select name="cars" id="cars" class="grades1 grades">
-                <option value="A+">A+</option>
-                <option value="A">A</option>
-                <option value="A-">A-</option>
-                <option value="B+">B+</option>
-                <option value="B">B</option>
-                <option value="B-">B-</option>
-                <option value="C+">C+</option>
-                <option value="C">C</option>
-                <option value="D">D</option>
-                <option value="F">F</option>
-            </select>
-            <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+           <div class="input-items">
+                <input class="course" type="text" placeholder="Course Name(optional)">
+                <label for="cars">Grade:</label>
+                <select name="cars" id="cars" class="grades1 grades">
+                    <option value="A+">A+</option>
+                    <option value="A">A</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
+                    <option value="B">B</option>
+                    <option value="B-">B-</option>
+                    <option value="C+">C+</option>
+                    <option value="C">C</option>
+                    <option value="D">D</option>
+                    <option value="F">F</option>
+                </select>
+                <input id="credit" class="credit1 credit" type="text" placeholder="Credit">
+           </div>
             <br>
             </div>
             <i id="add-row" class="fa-solid fa-circle-plus"></i> <br>
