--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <input class="course" type="text" placeholder="Course Name(optional)">
                 <label for="cars">Grade:</label>
                 <select name="cars" id="cars" class="grades1 grades">
+                    <option value="" disabled selected>Grade</option>
                     <option value="A+">A+</option>
                     <option value="A">A</option>
                     <option value="A-">A-</option>
@@ -43,6 +44,7 @@
                 <input class="course" type="text" placeholder="Course Name(optional)">
                 <label for="cars">Grade:</label>
                 <select name="cars" id="cars" class="grades1 grades">
+                    <option value="" disabled selected>Grade</option>
                     <option value="A+">A+</option>
                     <option value="A">A</option>
                     <option value="A-">A-</option>
@@ -61,6 +63,7 @@
                 <input class="course" type="text" placeholder="Course Name(optional)">
                 <label for="cars">Grade:</label>
                 <select name="cars" id="cars" class="grades1 grades">
+                    <option value="" disabled selected>Grade</option>
                     <option value="A+">A+</option>
                     <option value="A">A</option>
                     <option value="A-">A-</option>
@@ -79,6 +82,7 @@
                 <input class="course" type="text" placeholder="Course Name(optional)">
                 <label for="cars">Grade:</label>
                 <select name="cars" id="cars" class="grades1 grades">
+                    <option value="" disabled selected>Grade</option>
                     <option value="A+">A+</option>
                     <option value="A">A</option>
                     <option value="A-">A-</option>
